--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "author": "",
     "license": "",
     "dependencies": {
-        "next": "^12.0.10"
+        "@emotion/react": "^11.8.2",
+        "@emotion/styled": "^11.8.1",
+        "@mui/icons-material": "^5.5.1",
+        "@mui/material": "^5.5.1",
+        "next": "^12.0.10",
+        "react": "^17.0.2"
     },
     "devDependencies": {
+        "eslint": "^8.11.0",
+        "eslint-config-next": "^12.1.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-prettier": "^4.0.0",
