--- a/package.json
+++ b/package.json
@@ -10,29 +10,30 @@
     "refine": "refine"
   },
   "dependencies": {
-    "@refinedev/cli": "2.5.1",
-    "@refinedev/core": "4.5.8",
-    "@refinedev/nextjs-router": "5.1.4",
-    "@refinedev/inferencer": "4.0.0",
-    "@refinedev/kbar": "1.1.0",
+    "@chakra-ui/react": "2.5.1",
+    "@refinedev/chakra-ui": "^2.22.0",
+    "@refinedev/cli": "^2.7.2",
+    "@refinedev/core": "^4.28.0",
+    "@refinedev/inferencer": "^4.3.2",
+    "@refinedev/kbar": "^1.1.2",
+    "@refinedev/nextjs-router": "^5.3.2",
+    "@refinedev/react-hook-form": "^4.6.0",
+    "@refinedev/react-table": "^5.4.0",
+    "@refinedev/supabase": "^5.5.2",
+    "@tabler/icons-react": "^2.28.0",
     "next": "13.0.6",
+    "next-i18next": "8.9.0",
     "nookies": "2.5.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "@refinedev/supabase": "5.0.0",
-    "@refinedev/chakra-ui": "2.5.4",
-    "@refinedev/react-hook-form": "4.1.2",
-    "@refinedev/react-table": "5.1.4",
-    "@tabler/icons": "1.1.0",
-    "@chakra-ui/react": "2.5.1",
-    "next-i18next": "8.9.0"
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
+    "@types/node": "12.20.11",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
-    "@types/node": "12.20.11",
     "@typescript-eslint/parser": "5.48.0",
-    "typescript": "4.7.4",
-    "cross-env": "7.0.3"
+    "cross-env": "7.0.3",
+    "typescript": "4.7.4"
   }
 }
